CSS hidden overflow fixed

--- a/app/assets/stylesheets/sections/_users.scss
+++ b/app/assets/stylesheets/sections/_users.scss
@@ -1,3 +1,7 @@
+.container{
+	width: 100%;
+	overflow: hidden;
+}
 .resume{
 	float: right;
 	width: 400px;
